# Haskell-Practice

./: .env  .gitignore  FunctionWithLet.hs  FunctionWithWhere.hs  README.md  fkale.nix  flake.nix  learn.hs  test.hs
Applicatives/: app.hs  exercise.hs  exercise2.hs  instance.hs  maybe.hs
Chapter 2/: gloabl.hs  print1.hs  print2.hs  print3.hs  print3flipped.hs  string.hs
Chapter11/: BinaryTree.hs  Bool.hs  Deconstrution.hs  Jammin.hs
Chapter12/: maybe.hs
Chapter13/hangman/: hangman.cabal
Chapter13/hangman/app/: Main.hs
Chapter13/hello-haskell/: hello-haskell.cabal
Chapter13/hello-haskell/app/: Hello.hs  Main.hs
Chapter14/Morse/: CHANGELOG.md  morse.cabal
Chapter14/Morse/app/: Main.hs  Morse.hs
Chapter14/Morse/tests/: tests.hs
Chapter14/testing/: CHANGELOG.md  addition.cabal
Chapter14/testing/app/: Addition.hs
Chapter15/: monoids.hs
Chapter15/orphan-instance/: ListyInstances.hs
Chapter16/: excercise.hs  flip.hs  functors.hs  mapping.hs  maybe-functors.hs  replace.hs
Chapter3/: currying.hs  greeting.hs  show.hs  typeInterence1.hs
Chapter7/: FuncCompo.hs  Guards.hs  HOF.hs  registeredUser.hs
Foldable/: instances.hs
Lists/: Char.hs  Ciphers.hs  PatternMatching.hs
Monads/: defination.hs  either.hs  exercise.hs  kleisli.hs  lists.hs  maybe.hs
Reader/: exercise.hs  instance.hs
Recursion/: factorial.hs
State/: instance.hs
Structures/: applicatives.hs  functors.hs
Structures/shawty/: CHANGELOG.md  dump.rdb  shawty.cabal
Structures/shawty/app/: Main.hs
Traversable/: instances.hs
