cabal-version:      3.0
name:               shawty
version:            0.1.0.0
synopsis:           URL Shortener App Example
-- description:
license:            GPL-2.0-or-later
license-file:       LICENSE
author:             Vincent Onyango
maintainer:         me@verencelola.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable shawty
    import:           warnings
    main-is:          Main.hs
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , bytestring
                    , hedis
                    , mtl
                    , network-uri
                    , random
                    , scotty
                    , text
                    , transformers
    hs-source-dirs:   app
    default-language: GHC2021
